noinst_HEADERS = blue_key.xpm blue_yellow_key.xpm brief.xpm decrypt.xpm \
	delete.xpm detailed.xpm edit.xpm encrypt.xpm export.xpm floppy.xpm \
	folder.xpm gpa_blue_key.xpm gpa_logo.xpm gpa_yellow_key.xpm \
	harddisk.xpm help.xpm import.xpm keyring.xpm openfile.xpm \
	open_folder.xpm sign.xpm verify.xpm wizard_backup.xpm \
	wizard_genkey.xpm keyringeditor.xpm smartcard.xpm \
        blue_yellow_cardkey.xpm
